FIX fixed some layout issues

--- a/dime-personalserver/dime-communications/src/main/webapp/static/dime/css/style.css
+++ b/dime-personalserver/dime-communications/src/main/webapp/static/dime/css/style.css
@@ -1914,6 +1914,13 @@ input[type="checkbox"] {
     width: 98%;
 }
 
+#DimeDetailDialogSituation{
+    margin-top: 15px;
+    margin-right: 60px;
+    clear: both;
+    float: right;
+}
+
 .DimeDetailDialogText{
     float: left;
     clear: both;
